# OOP

./: CMakeLists.txt  README.md  main.cpp
Headers/: Admin.h  Customer.h  Person.h  Staff.h  SuperAdmin.h  User.h
Includes/: Admin.cpp  Customer.cpp  Person.cpp  Staff.cpp  SuperAdmin.cpp  User.cpp
